--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,800;1,200;1,300;1,500;1,700;1,800&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,400;1,500&display=swap"
       rel="stylesheet"
     />
+    <script src="https://www.gstatic.com/firebasejs/8.0/firebase.js"></script>
+    <script>
+      var config = {
+        apiKey: "AIzaSyBEuJS0eRFPnMaLyvuw7rx_oi_Z19TvsfI",
+        authDomain: "my-billboard-charts.firebaseapp.com",
+      };
+      firebase.initializeApp(config);
+    </script>
     <script src="https://accounts.google.com/gsi/client" async></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
